<resources>
    <string name="app_name">Education Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Thông tin</string>
    <string name="action_settings">Cài đặt</string>
    <string name="drawer_menu_notification">Thông báo</string>
    <string name="drawer_menu_scheduler">Lịch học</string>
    <string name="drawer_menu_teaching_scheduler">Lịch dạy</string>
    <string name="drawer_menu_score_board">Kết quả học tập</string>
    <string name="drawer_menu_logout">Đăng xuất</string>
    <string name="drawer_menu_news">Tin tức</string>
    <string name="drawer_menu_login">Đăng nhập</string>
    <string name="drawer_menu_profile">Thông tin cá nhân</string>
    <string name="drawer_menu_children_info">Thông tin con cái</string>
    <string name="drawer_menu_title_others">Khác</string>

    <string name="login_screen_title">XIN CHÀO</string>
    <string name="login_screen_input_username">Tên đăng nhập</string>
    <string name="login_screen_input_password">Mật khẩu</string>
    <string name="login_screen_button_login">Đăng nhập</string>
    <string name="full_name">Họ tên</string>
    <string name="gender">Giới tính</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="id">Số CMND</string>
    <string name="address">Địa chỉ</string>

    <string name="must_not_empty">Thông tin không được để trống</string>
    <string name="wrong_account">Tài khoản hoặc mật khẩu không đúng</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="error_occurred">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="update_success">Cập nhật thông tin thành công</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="fill_all_fields">Vui lòng điền đầy đủ thông tin</string>
    <string name="press_back_to_exit">Nhấn nút BACK lần nữa để thoát</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="confirm">Xác nhận</string>
    <string name="not_match">Không khớp mật khẩu</string>
    <string name="wrong_password">Mật khẩu không chính xác</string>
    <string name="change_password_success">Thay đổi mật khẩu thành công</string>
    <string name="button_view_score_board">Bảng điểm</string>
    <string name="button__view_schedule">Lịch học</string>
</resources>
