<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_news"
                android:title="@string/drawer_menu_news"/>
        <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_menu_notification"
                android:title="@string/drawer_menu_notification"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/drawer_menu_profile"/>
        <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_menu_schedule"
                android:title="@string/drawer_menu_scheduler"/>
        <item
                android:id="@+id/nav_score_board"
                android:icon="@drawable/ic_menu_score_board"
                android:title="@string/drawer_menu_score_board"/>
        <item
                android:id="@+id/nav_teaching_scheduler"
                android:icon="@drawable/ic_menu_schedule"
                android:title="@string/drawer_menu_teaching_scheduler"/>
        <item
                android:id="@+id/nav_students_info"
                android:icon="@drawable/ic_menu_children_info"
                android:title="@string/drawer_menu_children_info"/>
    </group>

    <item android:title="@string/drawer_menu_title_others">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/drawer_menu_logout"/>
            <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_login"
                    android:title="@string/drawer_menu_login"/>

        </menu>
    </item>

</menu>
