<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorWhite"
                                             tools:ignore="Autofill">
    <android.support.v7.widget.Toolbar
            android:theme="@style/MyActionBar"
            app:titleTextColor="@color/colorWhite"
            android:id="@+id/toolbar"
            app:title="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="80dp"
            android:id="@+id/tilCurrentPassword"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/current_password"
                android:id="@+id/edt_current_password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tilNewPassword"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCurrentPassword">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:id="@+id/edt_new_password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tilConfirmNewPassword"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNewPassword">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirm_new_password"
                android:id="@+id/edt_confirm_new_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmNewPassword"/>

</android.support.constraint.ConstraintLayout>