<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProfileActivity">
    <android.support.v7.widget.Toolbar
            android:theme="@style/MyActionBar"
            app:titleTextColor="@color/colorWhite"
            android:id="@+id/toolbar"
            app:title="@string/drawer_menu_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingTop="50dp"
            android:background="@drawable/background"
            android:paddingBottom="10dp"
            android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="4dp"
                app:civ_border_color="#FFFFFFFF"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/imgAvatar"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/full_name"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:background="@null"
                        android:id="@+id/tvFullName"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/gender"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:background="@null"
                        android:id="@+id/tvGender"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/birthday"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:background="@null"
                        android:id="@+id/tvBirthDay"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/id"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:background="@null"
                        android:id="@+id/tvId"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/phone_number"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:background="@null"
                        android:id="@+id/edtPhoneNumber"
                        android:inputType="none" tools:ignore="Autofill,LabelFor,TextFields"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_border"
                    android:padding="20dp"
                    android:weightSum="3">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:text="@string/address"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#000000"
                        android:background="@null"
                        android:textSize="16sp"
                        android:id="@+id/edtAddress"
                        android:inputType="none"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>